--- a/projects/admin/src/app/pages/signup/signup.component.scss
+++ b/projects/admin/src/app/pages/signup/signup.component.scss
@@ -1,4 +1,4 @@
-.login {
+.signup {
   height: 100vh;
   display: flex;
   align-items: center;
@@ -10,7 +10,7 @@
     color: #404eed;
     font-size: 24px;
   }
-  .login-inner {
+  .signup-inner {
     width: 450px;
     max-width: 90%;
     margin: 0 auto;
