--- a/projects/admin/src/styles.scss
+++ b/projects/admin/src/styles.scss
@@ -1,5 +1,37 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@400;600&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #110f0f;
+}
+
+body {
+  background-color: #f1f1f1;
+  color: #110f0f;
+  font-family: "Poppins", sans-serif;
+}
+
+.container {
+  width: 1140px;
+  max-width: 90%;
+  margin: 0 auto;
+}
+
+.valid-err {
+  color: red;
+  font-size: 12px;
+  font-weight: 600;
+  margin-top: 3px;
+  padding: 0 20px;
 }
