--- a/projects/admin/src/app/pages/signup/signup.component.scss
+++ b/projects/admin/src/app/pages/signup/signup.component.scss
@@ -23,4 +23,16 @@
       margin: 15px 20px 0;
     }
   }
+  .login {
+    font-size: 13px;
+    color: #404eed;
+    margin: 10px 20px 0;
+    display: block;
+  }
+  .error-message {
+    font-size: 13px;
+    color: #ed4040;
+    margin: 10px 20px 0;
+    display: block;
+  }
 }
