signup-login setting

--- a/projects/admin/src/app/pages/signup/signup.component.html
+++ b/projects/admin/src/app/pages/signup/signup.component.html
@@ -72,9 +72,9 @@
     <p class="valid-err">Şifreniz En Fazla 16 Karakter Olmalıdır</p>
     } }
     <lib-input-control
-      labelName="Şifre"
+      labelName="Tekrar Şifre"
       [form]="form"
-      placeholder="Şifrenizi Giriniz"
+      placeholder="Şifrenizi Tekrar Giriniz"
       [formControl]="newRePassword"
       type="password"
     ></lib-input-control>
