--- a/projects/admin/src/app/pages/blogs/table/table.component.scss
+++ b/projects/admin/src/app/pages/blogs/table/table.component.scss
@@ -17,7 +17,8 @@
       img {
         width: 75px;
       }
-      button {
+      button,
+      a {
         margin: 0 10px;
         cursor: pointer;
         background-color: #404eed;
