--- a/projects/admin/src/app/pages/login/login.component.scss
+++ b/projects/admin/src/app/pages/login/login.component.scss
@@ -1,38 +1,82 @@
 .login {
-  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
-  h1 {
-    margin-bottom: 50px;
-    font-weight: 600;
-    color: #404eed;
-    font-size: 24px;
-  }
+  height: 100vh;
   .login-inner {
-    width: 450px;
+    background-color: #fff;
+    width: 550px;
     max-width: 90%;
     margin: 0 auto;
-    background-color: #fff;
     border-radius: 7px;
-    padding: 15px;
-    box-shadow: 0px 0px 67px 0px rgba(199, 199, 199, 1);
-    app-main-btn {
-      display: block;
-      margin: 15px 20px 0;
+    padding: 15px 25px;
+    .content {
+      .title {
+        font-size: 40px;
+        text-align: center;
+        color: #2036de;
+        font-weight: 600;
+      }
+      .auth {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 15px 0;
+        gap: 10px;
+        .facebook,
+        .google {
+          padding: 10px 20px;
+          display: flex;
+          align-items: center;
+          gap: 5px;
+          cursor: pointer;
+          border-radius: 7px;
+          background-color: #fff;
+          font-size: 14px;
+          font-weight: 600;
+          color: #1f1f1f;
+          border: 1px solid #1f1f1f;
+          transition: 0.3s;
+          &:hover {
+            background-color: #1f1f1f;
+            color: #fff;
+          }
+          i {
+            font-size: 25px;
+          }
+          img {
+            width: 25px;
+          }
+        }
+        .facebook {
+          background-color: #3b5998;
+          color: #fff;
+          border: 1px solid #3b5998;
+        }
+      }
+    }
+    .form {
+      app-main-btn {
+        margin-top: 15px;
+        display: block;
+      }
     }
   }
   .sign {
-    font-size: 13px;
-    color: #404eed;
-    margin: 10px 20px 0;
-    display: block;
+    font-weight: 600;
+    font-size: 14px;
+    display: inline-block;
+    color: #1f1f11;
+    margin: 10px 0 0;
+    a {
+      color: #2036de;
+    }
   }
   .error-message {
     font-size: 13px;
-    color: #ed4040;
-    margin: 10px 20px 0;
+    color: #ff0000;
     display: block;
+    margin: 4px 0 0;
+    font-weight: 600;
   }
 }
